--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
-            <img style="height: 150%; width: 150%;" src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+            <img style="height: 80%; width: 80%;" src="assets/img/power2.png" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -174,7 +174,7 @@
         </div>
 
         <div class="col-lg-5 order-1 order-lg-2 why-us-img">
-          <img src="assets/img/fibreo.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
+          <img src="assets/img/power3.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
         </div>
       </div>
 
@@ -293,9 +293,9 @@
           </div><!-- End Portfolio Item -->
           
           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-            <img src="assets/img/portfolio/elec.webp" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/power1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <a href="assets/img/portfolio/elec.webp" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/portfolio/power1.png" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
 
@@ -399,11 +399,11 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">GREEN FEELS</span>
+            <a href="https://g.co/kgs/PZf1DHv" class="sitename">GREEN FEELS</a>
           </a>
           <div class="footer-contact pt-3">
-            <p>1905-05,The Binary By Omniyat</p>
-            <p>Business Bay Dubai-UAE</p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://g.co/kgs/PZf1DHv">1905-05, The Binary by Omniyat</a></p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://g.co/kgs/PZf1DHv">Business Bay, Dubai, UAE</a></p>
             <p class="mt-3"><strong>Phone:</strong> <span>+971 50 339 6579</span></p>
             <p><strong>Email:</strong> <span>greenfeelspowergeneration@gmail.com</span></p>
           </div>
