--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>1905-05,The Binary By Omniyat,Business Bay Dubai-UAE</p>
+                  <p> <a style="font-family: inherit; font-size: inherit; color: #444444;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">1905-05,The Binary By Omniyat,Business Bay Dubai-UAE</a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -345,7 +345,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d115534.9959939894!2d55.18437106675869!3d25.187414180272732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3e5f69d3bb4198df%3A0xa2db82f588c4c7fb!2s32%20Marasi%20Drive%20Street%20-%20Business%20Bay%20-%20Dubai!3m2!1d25.187437!2d55.266772599999996!5e0!3m2!1sen!2sae!4v1734346534020!5m2!1sen!2sae" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            
+              <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d115540.56230557298!2d55.189108666556365!3d25.18154398414485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3e5f69466ef0c71b%3A0x9599953675eee0dd!2sThe%20Binary%20By%20Omniyat%20-%201905-05%20-%20Business%20Bay%20-%20Dubai!3m2!1d25.1815668!2d55.271510199999994!5e0!3m2!1sen!2sae!4v1734607383386!5m2!1sen!2sae" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            
             </div>
           </div>
 
@@ -399,11 +399,11 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
-            <a href="https://g.co/kgs/PZf1DHv" class="sitename">GREEN FEELS</a>
+            <a href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="sitename">GREEN FEELS</a>
           </a>
           <div class="footer-contact pt-3">
-            <p><a style="font-family: inherit; font-size: inherit;" href="https://g.co/kgs/PZf1DHv">1905-05, The Binary by Omniyat</a></p>
-            <p><a style="font-family: inherit; font-size: inherit;" href="https://g.co/kgs/PZf1DHv">Business Bay, Dubai, UAE</a></p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">1905-05, The Binary by Omniyat</a></p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Business Bay, Dubai, UAE</a></p>
             <p class="mt-3"><strong>Phone:</strong> <span>+971 50 339 6579</span></p>
             <p><strong>Email:</strong> <span>greenfeelspowergeneration@gmail.com</span></p>
           </div>
