--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
-            <img style="height: 80%; width: 80%;" src="assets/img/power2.png" class="img-fluid animated" alt="">
+            <img style="height: 80%; width: 80%;" src="assets/img/hero-img.png" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@
       <div class="row">
 
         <div class="col-lg-6 d-flex align-items-center">
-          <img src="assets/img/whyus.webp" class="img-fluid" alt="">
+          <img src="assets/img/whyus.jpg" class="img-fluid" alt="">
         </div>
 
         <div class="col-lg-6 pt-4 pt-lg-0 content">
