--- a/index.html
+++ b/index.html
@@ -299,6 +299,19 @@
             </div>
           </div><!-- End Portfolio Item -->
 
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p2.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
         </div><!-- End Portfolio Container -->
 
       </div>
