--- a/index.html
+++ b/index.html
@@ -279,16 +279,16 @@
         <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-            <img src="assets/img/portfolio/wire.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/DAYTON 3,120V 208V AC Wye, 150°C.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <a href="assets/img/portfolio/wire.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/portfolio/DAYTON 3,120V 208V AC Wye, 150°C.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-            <img src="assets/img/portfolio/fibre.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/DAYTON 240V AC Delta, 6KVA, 60 Hz,.avif" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <a href="assets/img/portfolio/fibre.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/portfolio/DAYTON 240V AC Delta, 6KVA, 60 Hz,.avif" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
           
@@ -312,6 +312,21 @@
               <a href="assets/img/portfolio/p2.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/ACME 15KVA.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/ACME 15KVA.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/ACME 30KVA.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/ACME 30KVA.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+
         </div><!-- End Portfolio Container -->
 
       </div>
