--- a/index.html
+++ b/index.html
@@ -375,7 +375,91 @@
               <a href="assets/img/portfolio/p_5.png" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
-
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p9.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p9.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p10.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p10.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p11.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p11.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p12.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p12.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p13.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p13.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p17.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p17.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p14.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p14.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p20.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p20.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p21.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p21.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+                    <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p23.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p23.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p24.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p24.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p25.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p25" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p15.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p15.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/p16.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/p16.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->         
+          
         </div><!-- End Portfolio Container -->
 
       </div>
