--- a/index.html
+++ b/index.html
@@ -458,7 +458,37 @@
             <div class="portfolio-info">
               <a href="assets/img/portfolio/p16.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
-          </div><!-- End Portfolio Item -->         
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/s1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/s1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/s2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/s2.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/I3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/I3.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/I2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/I2.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/I1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/I1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
           
         </div><!-- End Portfolio Container -->
 
