pipe image added

--- a/index.html
+++ b/index.html
@@ -489,6 +489,30 @@
               <a href="assets/img/portfolio/I1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/pp1.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/pp1.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/pp2.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/pp2.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/pp3.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/pp3.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
+          <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-app">
+            <img src="assets/img/portfolio/pp4.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <a href="assets/img/portfolio/pp4.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            </div>
+          </div><!-- End Portfolio Item -->
           
         </div><!-- End Portfolio Container -->
 
