--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p> <a style="font-family: inherit; font-size: inherit; color: #444444;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">1905-05,The Binary By Omniyat,Business Bay Dubai-UAE</a></p>
+                  <p> <a style="font-family: inherit; font-size: inherit; color: #444444;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Office No: 14-11-11, Adel Mohamed Ali Jasim Almarzouqi Building, Al Goze First, Dubai, UAE</a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -590,8 +590,8 @@
             <a href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="sitename">GREEN FEELS</a>
           </a>
           <div class="footer-contact pt-3">
-            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">1905-05, The Binary by Omniyat</a></p>
-            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Business Bay, Dubai, UAE</a></p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Office No: 14-11-11, Adel Mohamed Ali Jasim Almarzouqi Building</a></p>
+            <p><a style="font-family: inherit; font-size: inherit;" href="https://www.google.com/maps/dir//The+Binary+By+Omniyat+-+1905-05+-+Business+Bay+-+Dubai/@25.181544,55.1891087,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e5f69466ef0c71b:0x9599953675eee0dd!2m2!1d55.2715102!2d25.1815668?hl=en-GB&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Al Goze First, Dubai, UAE</a></p>
             <p class="mt-3"><strong>Phone:</strong> <span>+971 50 339 6579</span></p>
             <p><strong>Email:</strong> <span>greenfeelspowergeneration@gmail.com</span></p>
           </div>
